refactor: FileWriterService